a few more additions to metaphor section

--- a/LaTeX/intro.tex
+++ b/LaTeX/intro.tex
@@ -253,7 +253,7 @@ emerge? We break down interpersonal influence into a verbal, formal, and computa
 model and see if polarization emerges from that model, without assuming anything
 about polarization itself. Interpersonal influence of opinions can be broken down into
 four important cognitive components: (1) attractive and repulsive influence of
-opinions~\cite{French1956,Cikara2014}; (2) homophily, i.e., preferential assortment with like others~\cite{McPherson2001};
+opinions~\cite{French1956,Cikara2014,Bail2018}; (2) homophily, i.e., preferential assortment with like others~\cite{McPherson2001};
 (3) biased assimilation, i.e., heightened influence by similar others~\cite{Dandekar2013}; and
 (4) a correlation between stubbornness and extremity of opinions~\cite{Reiss2019,Zmigrod2019a}. 
 Other cognitive components may include, e.g., personality traits that may be predictive of 
@@ -331,7 +331,8 @@ mathematics~\cite{Lakoff1997,Marghetis2013},
 and, the focus of this dissertation, politics~\cite{Lakoff2008,Charteris-Black2009}.
 Metaphor is one of several forms of linguistic \emph{framing} that can 
 powerfully influence our understanding of real world 
-events~\cite{Fillmore1982,Chong2007,Fausey2011,Matlock2012,Sagi2013a,Cacciatore2016}.
+events through strategic, pragmatic choice of 
+words~\cite{Fillmore1982,Chong2007,Fausey2011,Matlock2012,Sagi2013a,Cacciatore2016}.
 
 Metaphor is a cognitive tool to understand abstract concepts in terms of more
 concrete, physically-experienced, or \emph{embodied}, 
@@ -354,10 +355,17 @@ the physical sensations of elation or depression following a political win
 or a political defeat, and the adrenaline (and other biophysical repsonses)
 of the fight itself~\cite{Gallese2005,David2016}. 
 
+Politicians and commentators have long used metaphor, in many cases to motivate
+supporters and villify opponents. To take a current example, Fox News has
+recently been covering what they call ``Classroom Warfare'' around the issue
+of Critical Race Theory~\footnote{Humorously covered by The Daily Show here:}
+Calling this a war first inflames passions. But if we want to understand the
+entailments of this metaphorical framing, we have to consider what else goes
+along with the \textsc{war} conceptual frame. Wars have at least two combatants,
+literally mortal enemies. 
 \begin{itemize}
   \item
     Review of results on metaphor in politics and mass media~\cite{Lakoff1991,Charteris-Black2009,Burnes2011,Flusberg2017,Flusberg2017a,Flusberg2018,Burgers2019}
-
   \item
     Metaphor and framing effects in extremism and polarization~\cite{Flusberg2017,Flusberg2018,Kalmoe2014,Kalmoe2018}
 \end{itemize}
@@ -488,7 +496,8 @@ false scientific beliefs and
 misinformation~\cite{Zollman2007,Zollman2013,OConnor2018,OConnor2019e}.
 
 Often in intergroup social influence, there is no drive to unite in
-opinions, but instead a drive towards differencing~\cite{Tajfel1979,Sherif1988,Flache2011}. 
+opinions, but instead a drive towards differencing~\cite{Tajfel1979,Sherif1988,Flache2011},
+especially when confronted with out-group opinions~\cite{Bail2018}.
 Group membership may be determined by observable traits such as race, language,
 or style of dress, but it need not be. The ``novel group'' experimental design in
 social psychology has revealed in a number of cases that group membership
