put together S3 draft

--- a/LaTeX/intro.tex
+++ b/LaTeX/intro.tex
@@ -356,88 +356,50 @@ or a political defeat, and the adrenaline (and other biophysical repsonses)
 of the fight itself~\cite{Gallese2005,David2016}. 
 
 Politicians and commentators have long used metaphor, in many cases to motivate
-supporters and villify opponents. To take a current example, Fox News has
+supporters and villify opponents~\cite{Charteris-Black2009}. 
+To take a current example, Fox News has
 recently been covering what they call ``Classroom Warfare'' around the issue
 of Critical Race Theory~\footnote{Humorously covered by The Daily Show here:}
 Calling this a war first inflames passions. But if we want to understand the
 entailments of this metaphorical framing, we have to consider what else goes
-along with the \textsc{war} conceptual frame. Wars have at least two combatants,
-literally mortal enemies. 
-\begin{itemize}
-  \item
-    Review of results on metaphor in politics and mass media~\cite{Lakoff1991,Charteris-Black2009,Burnes2011,Flusberg2017,Flusberg2017a,Flusberg2018,Burgers2019}
-  \item
-    Metaphor and framing effects in extremism and polarization~\cite{Flusberg2017,Flusberg2018,Kalmoe2014,Kalmoe2018}
-\end{itemize}
+along with the \textsc{war} conceptual frame. Wars have at least two combatants---
+soldiers for each side are literally mortal enemies. 
+In the context of American politics and certainly to Fox News viewers, there
+are conservatives on the Fox News side and liberals on the MSNBC side. 
+Indeed, patterns in news consumption reflect this split, with Donald Trump
+voters watching Fox News far more than any other oultet in 2016, and 
+Hillary Clinton voters watching MSNBC and CNN more than any other 
+outlet~\cite{Prior2013,Pew2014PolarizationAndMediaHabits,Pew2017TrumpClinton}.
+Beyond the partisan ``wars'' that play out on American cable news, there are
+other political issues and events in the USA and abroad are 
+described using metaphorical language. For instance, metaphors (which) were
+used to cast Saddam Hussein as a madman and the United States as ``givers''
+of freedom Kuaiti and Iraqi citizens, which was metaphorically ``taken away''
+during Saddam Hussein's reign and invasion~\cite{Lakoff1991}. 
+This is a metaphor since freedom
+is not a thing one can give, as one would give another person water or food, 
+for example, so we identify the conceptual metaphor \textsc{freedom is an object}.
+War metaphors for addressing the climate crisis seem to foster a greater
+sense of urgency for finding solutions to the crisis~\cite{Flusberg2018}. 
+In France and the UK, metaphor use was observed to vary depending on the
+political situation being described---when Obama won the 2008 election,
+the UK and French presses, Obama's victory was framed as something predestined,
+casting Obama as a sort of savior ushering in a new era of US politics. However,
+when around the same time former Pakistani General and President Pervez Musharaf's party 
+lost Pakistani presidential elections, UK and French news outlets 
+called it a ``knockout'' and generally used other violent and disparaging
+metaphors against the former president, despite him not being a 
+candidate~\cite{Burnes2011}.
 
-% In this section, I zoom out to discuss metaphor's
-% importance in cognitive science and to discuss how metaphor is one of several
-% methods studied by communication and political scientists as a method of
-% \emph{framing} more generally~\cite{Fillmore1982}---though use of that 
-% word may be misleading due to being used too freely for too many 
-% diverse situations~\cite{Cacciatore2016}.
+There is empirical data from behavioral studies that supports the inference
+that such discourse would lead to real world extremism and even violence.
+In a series of studies, \citeA{Kalmoe2014} and \citeA{Kalmoe2018} showed that
+exposure to violent metaphors drove partisans further apart in terms of opinions, and 
+exacerbated aggressive tendencies towards one's political out-group. These effects
+were most pronounced for the most aggressive members of society. Clearly violence
+metaphors need to be understood due to their possibly detrimental 
+effects on political and social stability.
 
-% Metaphor is important in cognitive science because metaphor enables people 
-% to scaffold their understanding of abstract concepts in terms of more concrete
-% concepts~\cite{Lakoff1980,Gibbs2011,Gibbs2012a,Kovecses2017}. 
-
-% Violence metaphors, which I focus on in this disseration, 
-% are particularly important, especially as regards political
-% polarization because they have been shown 
-% to siginificantly affect political opinions and influence the likelihood of
-% real world violent behavior. 
-
-% Violence metaphors are just one of a great number of metaphorical constructions
-% \cite{Goldberg2003,Goldberg2006,Dodge2015}. 
-% In politics, for example, another important class of metaphors is
-% metaphors for refugees and immigrants. It changes our behavior towards 
-% immigrants if we cast them in a negative light as something destructive, 
-% such as an infestation or a flood, compared to finding more positive 
-% metaphors~\cite{OBrien2003,Cisneros2008}.
-
-% Metaphor is a more general instance of a way to frame a particular topic. 
-% Linguistic frames are ``instantiated'' based on words being used to describe the
-% topic, along with the emotional valence and other factors of the words. To take
-% a general example consider the Instagram post from Comedy Central's 
-% \emph{The Daily Show} host Trevor Noah identifying how
-% framing can drastically change the way ideological presented in Figure~\ref{fig:TrevorNoahFraming}. In this example, an anchor from the right-wing outlet NewsMax
-% reports that a high school yearbook was banned because it contained a feature
-% on Black Lives Matter, but did not contain any features on ``opposing views
-% like Blue Lives Matter and All Lives Matter''. Trevor Noah notes this is a 
-% false dichotomy---the opposite of Black Lives Matter is Black Lives \emph{do not}
-% matter. This example also serves as an example of how media strategies can 
-% foster either consensus or polarized opinions in society. By definition, if
-% those advocating for policing reforms to stop police killing of black people
-% are understood to be \emph{against} police officers themselves and policing
-% in general, then one will have to choose one of these polar opposites or 
-% another. Consensus becomes more likely when false dichotomies such as this one
-% are abandoned for a more nuanced, accurate representation of reality.
-
-% \begin{figure}
-%   \centering
-%     \includegraphics[width=0.5\textwidth]{Figures/TrevorNoahFraming.png}
-%   \caption{Political and social issues look different depending on what language
-% is used to describe them. Furthermore, the way a person frames a certain issue
-% can be used to infer their opinions or beliefs regarding political and social
-% topics. Here, the NewsMax anchor reveals he and his organization believe 
-% Black Lives Matter stands in opposition to other movements, groups, or 
-% slogans such as Blue Lives Matter or All Lives Matter. Noah identifies the
-% illogic of the NewsMax anchor's statement, revealing a misleading dichotomy.
-% Subtle framing strategies such as this one build on one another to develop
-% the sorts of polarization widely observed to day, in combination with other
-% factors.}
-% \label{fig:TrevorNoahFraming}
-% \end{figure}
-
-% In addition to the sort of conceptual blending and analogy-making that
-% characterizes metaphorical constructions, grammatical variations
-% and gesture or other multi-modal communication 
-% can result in different responses~\cite{Bennett2008,Matlock2012}. 
-% \citeA{Fausey2011} found that a fictional politician's personal failings and
-% corruption were judged more harshly if it was described using the past 
-% imperfect tense (i.e. \emph{VERB} + ing) compared to the past perfect tense
-% (\emph{VERB} + ed), since the imperfect implies such problems are ongoing.
-% (READ BENNETT AND ADD)
 
 
 
